# nonebot_plugin_vrchat

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  cookies  pyproject.toml
.github/: FUNDING.yml
i18n_old/: __init__.py  draw.py
nonebot_plugin_vrchat/: __init__.py  __main__.py  classes.py  config.py  draw.py  error.py  message.py  utils.py
nonebot_plugin_vrchat/commands/: change_lag.py  economy.py  friend.py  groups.py  help.py  login.py  notifications.py  search.py  utils.py  world.py
nonebot_plugin_vrchat/i18n/: .config.json  .lang.schema.json  .template.json  __init__.py  en-US.json  ja-JP.json  model.py  types.py  update.txt  utils.py  zh-CN.json
nonebot_plugin_vrchat/i18n/locales/: en-US.yml  zh-CN.yml
nonebot_plugin_vrchat/message/: 1.json  __init__.py  draw.py  friend.py  notifications.py  utils.py  world.py
nonebot_plugin_vrchat/message/templates/: friend_list (1).css  friend_list (1).html  friend_list.css  friend_list.html  friend_list_default.css  friend_list_default.html  friend_list_simple.html  ntf.css  ntf.html  player.css  player.html  world_list.css  world_list.html
nonebot_plugin_vrchat/vrchat/: __init__.py  avatars.py  client.py  cookies.py  cookies2.py  dict_type.py  economy.py  favorites.py  files.py  friend.py  groups.py  instances.py  inventory.py  login.py  notifications.py  types.py  users.py  utils.py  world.py
